[tool.poetry]
name = "vibrant"
version = "0.3.0"
description = "Role management discord based on color."
authors = ["Gumbachi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-cord = {version = "^2.4.1", extras = ["speed"]}
Pillow = "^10.0.1"
pymongo = {extras = ["srv"], version = "^4.3.3"}
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.259"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".venv"]
line-length = 120
